src/test/deca/syntax/invalid/homemade/bigInt.deca
// Description:
//    Test de génération d'une erreur si overflow d'une opération arithmétique sur des Floats
//
// Resultats:
//
//
// Historique:
//    cree le 17/01/2020


{
      println(2147483648);
}
